@@ -10,8 +10,68 @@
 	<name>${project.artifactId}</name>
 
 	<properties>
-		<project-common>1.0.0-SNAPSHOT</project-common>
-        <skip_maven_deploy>false</skip_maven_deploy>
+		<!-- Common libs -->
+		<rabbitmq_version>3.4.4</rabbitmq_version>
+		<dubbo_version>2.5.3</dubbo_version>
+		<spring_ct_version>4.1.5.RELEASE</spring_ct_version>
+		<!-- <spring_ct_version>3.2.4.RELEASE</spring_ct_version> -->
+		<spring_version>2.5.6.SEC03</spring_version>
+		<javassist_version>3.15.0-GA</javassist_version>
+		<netty_version>3.2.5.Final</netty_version>
+		<mina_version>1.1.7</mina_version>
+		<grizzly_version>2.1.4</grizzly_version>
+		<httpclient_version>4.4.1</httpclient_version>
+		<hessian_lite_version>3.2.1-fixed-2</hessian_lite_version>
+		<xstream_version>1.4.1</xstream_version>
+		<fastjson_version>1.1.39</fastjson_version>
+		<bsf_version>3.1</bsf_version>
+		<sorcerer_version>0.8</sorcerer_version>
+		<zookeeper_version>3.3.3</zookeeper_version>
+		<zkclient_version>0.1</zkclient_version>
+		<curator_version>1.1.16</curator_version>
+		<jedis_version>2.6.0</jedis_version>
+		<xmemcached_version>1.3.6</xmemcached_version>
+		<cxf_version>2.6.1</cxf_version>
+		<thrift_version>0.8.0</thrift_version>
+		<jfreechart_version>1.0.13</jfreechart_version>
+		<hessian_version>4.0.7</hessian_version>
+		<servlet_version>2.5</servlet_version>
+		<jetty_version>6.1.26</jetty_version>
+		<validation_version>1.0.0.GA</validation_version>
+		<hibernate_validator_version>4.2.0.Final</hibernate_validator_version>
+		<jcache_version>0.4</jcache_version>
+		<sca_version>2.0-M5.1</sca_version>
+		<guice_version>3.0</guice_version>
+		<cglib_version>2.2</cglib_version>
+		<webx_version>3.0.8</webx_version>
+		<!-- Log libs -->
+		<slf4j_version>1.7.6</slf4j_version>
+		<jcl_version>1.1</jcl_version>
+		<log4j_version>1.2.16</log4j_version>
+		<logback_version>1.0.6</logback_version>
+		<!-- Test libs -->
+		<junit_version>4.10</junit_version>
+		<easymock_version>3.0</easymock_version>
+		<jmockit_version>0.999.8</jmockit_version>
+		<!-- Build args -->
+		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
+		<skip_maven_deploy>false</skip_maven_deploy>
+		<updateReleaseInfo>true</updateReleaseInfo>
+		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
+
+		<!-- generate idea copyright -->
+		<copyright>Copyright 1999-2012 Alibaba Group.&#10; &#10;Licensed under
+			the Apache License, Version 2.0 (the &quot;License&quot;);&#10;you
+			may not use this file except in compliance with the License.&#10;You
+			may obtain a copy of the License at&#10; &#10;
+			http://www.apache.org/licenses/LICENSE-2.0&#10; &#10;Unless required
+			by applicable law or agreed to in writing, software&#10;distributed
+			under the License is distributed on an &quot;AS IS&quot;
+			BASIS,&#10;WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+			express or implied.&#10;See the License for the specific language
+			governing permissions and&#10;limitations under the License.</copyright>
+		<profile.name>oss</profile.name>
+
 		<!-- for maven compiler plugin -->
 		<maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
 		<java_source_version>1.7</java_source_version>
@@ -23,27 +83,431 @@
 		<maven_war_plugin_version>2.1.1</maven_war_plugin_version>
 		<maven_install_plugin_version>2.3.1</maven_install_plugin_version>
 		<maven_deploy_plugin_version>2.7</maven_deploy_plugin_version>
-		<validation_version>1.0.0.GA</validation_version>
-		<surefire-plugin-version>2.6</surefire-plugin-version>
-		
-		<log4j_version>1.2.16</log4j_version>
-		<copyright>Copyright 1999-2012 Alibaba Group.&#10; &#10;Licensed under
-			the Apache License, Version 2.0 (the &quot;License&quot;);&#10;you
-			may not use this file except in compliance with the License.&#10;You
-			may obtain a copy of the License at&#10; &#10;
-			http://www.apache.org/licenses/LICENSE-2.0&#10; &#10;Unless required
-			by applicable law or agreed to in writing, software&#10;distributed
-			under the License is distributed on an &quot;AS IS&quot;
-			BASIS,&#10;WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
-			express or implied.&#10;See the License for the specific language
-			governing permissions and&#10;limitations under the License.
-		</copyright> 
+
+
+		<!-- lenovo version -->
+		<project-snapshot_version>1.0.0-SNAPSHOT</project-snapshot_version>
+		<lenovo_snapshot>1.0.0-SNAPSHOT</lenovo_snapshot>
+		<lenovo-ibatis_version>1.0.2</lenovo-ibatis_version>
+		<lenovo-base_version>1.3.4</lenovo-base_version>
+		<lenovo-dubbo-api_version>1.2.1</lenovo-dubbo-api_version>
+		<lenovo-dubbo-client_version>1.1.0</lenovo-dubbo-client_version>
+		<lenovo-dubbo-service_version>1.0.0</lenovo-dubbo-service_version>
+		<lenovo-common_version>1.0.0</lenovo-common_version>
+		<lenovo-freemarker_version>1.0.2</lenovo-freemarker_version>
+		<lenovo-jedis_version>1.0.2</lenovo-jedis_version>
+		<lenovo-enum_version>1.5.1</lenovo-enum_version> 
+		<lenovo-product-redis_version>1.6.0</lenovo-product-redis_version> 
+
+		<!-- lenovo version -->
 	</properties>
+
 	<dependencyManagement>
 		<dependencies>
-			
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-enum</artifactId>
+				<version>${lenovo-enum_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-product-redis</artifactId>
+				<version>${lenovo-product-redis_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-jedis</artifactId>
+				<version>${lenovo-jedis_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-redis</artifactId>
+				<version>1.3.4.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-freemarker</artifactId>
+				<version>${lenovo-freemarker_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-ibatis</artifactId>
+				<version>${lenovo-ibatis_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-base</artifactId>
+				<version>${lenovo-base_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-dubbo-api</artifactId>
+				<version>${lenovo-dubbo-api_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-dubbo-client</artifactId>
+				<version>${lenovo-dubbo-client_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-dubbo-service</artifactId>
+				<version>${lenovo-dubbo-service_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo</groupId>
+				<artifactId>lenovo-common</artifactId>
+				<version>${lenovo-common_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lenovo.ucenter</groupId>
+				<artifactId>ucenter-sso-client</artifactId>
+				<version>6.8</version>
+			</dependency>
+
+
+
+
+
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>4.4.1</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-httpclient</groupId>
+				<artifactId>commons-httpclient</artifactId>
+				<version>3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.4.1</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-configuration</groupId>
+				<artifactId>commons-configuration</artifactId>
+				<version>1.8</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.4</version>
+			</dependency>
+
+
+			<dependency>
+				<groupId>com.rabbitmq</groupId>
+				<artifactId>amqp-client</artifactId>
+				<version>${rabbitmq_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>dubbo</artifactId>
+				<version>${dubbo_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring_ct_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-asm</artifactId>
+				<version>3.1.4.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context-support</artifactId>
+				<version>3.1.3.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.ibatis</groupId>
+				<artifactId>ibatis-core</artifactId>
+				<version>3.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ibatis</groupId>
+				<artifactId>ibatis2-common</artifactId>
+				<version>2.1.7.597</version>
+			</dependency>
+			<dependency>
+				<groupId>com.jolbox</groupId>
+				<artifactId>bonecp</artifactId>
+				<version>0.8.0.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-pool</groupId>
+				<artifactId>commons-pool</artifactId>
+				<version>1.6</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.9</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>2.6</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-ibatis</artifactId>
+				<version>2.0.8</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aop</artifactId>
+				<version>${spring_ct_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>${spring_ct_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring_ct_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-expression</artifactId>
+				<version>${spring_ct_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring_ct_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring</artifactId>
+				<version>${spring_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.javassist</groupId>
+				<artifactId>javassist</artifactId>
+				<version>${javassist_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.netty</groupId>
+				<artifactId>netty</artifactId>
+				<version>${netty_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.mina</groupId>
+				<artifactId>mina-core</artifactId>
+				<version>${mina_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.grizzly</groupId>
+				<artifactId>grizzly-core</artifactId>
+				<version>${grizzly_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${httpclient_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>hessian-lite</artifactId>
+				<version>${hessian_lite_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.thoughtworks.xstream</groupId>
+				<artifactId>xstream</artifactId>
+				<version>${xstream_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.bsf</groupId>
+				<artifactId>bsf-api</artifactId>
+				<version>${bsf_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jvnet.sorcerer</groupId>
+				<artifactId>sorcerer-javac</artifactId>
+				<version>${sorcerer_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.zookeeper</groupId>
+				<artifactId>zookeeper</artifactId>
+				<version>${zookeeper_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.sgroschupf</groupId>
+				<artifactId>zkclient</artifactId>
+				<version>${zkclient_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.netflix.curator</groupId>
+				<artifactId>curator-framework</artifactId>
+				<version>${curator_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+				<version>${jedis_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.googlecode.xmemcached</groupId>
+				<artifactId>xmemcached</artifactId>
+				<version>${xmemcached_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-frontend-simple</artifactId>
+				<version>${cxf_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-transports-http</artifactId>
+				<version>${cxf_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.thrift</groupId>
+				<artifactId>libthrift</artifactId>
+				<version>${thrift_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>jfree</groupId>
+				<artifactId>jfreechart</artifactId>
+				<version>${jfreechart_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.caucho</groupId>
+				<artifactId>hessian</artifactId>
+				<version>${hessian_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+				<version>${servlet_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty</artifactId>
+				<version>${jetty_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>${validation_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>${hibernate_validator_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.cache</groupId>
+				<artifactId>cache-api</artifactId>
+				<version>${jcache_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.tuscany.sca</groupId>
+				<artifactId>tuscany-sca-api</artifactId>
+				<version>${sca_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.inject</groupId>
+				<artifactId>guice</artifactId>
+				<version>${guice_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba.citrus</groupId>
+				<artifactId>citrus-webx-all</artifactId>
+				<version>${webx_version}</version>
+			</dependency>
+			<!-- Log libs -->
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>${slf4j_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>${jcl_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j_version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback_version}</version>
+			</dependency>
+			<!-- Test libs -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit_version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.easymock</groupId>
+				<artifactId>easymock</artifactId>
+				<version>${easymock_version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.googlecode.jmockit</groupId>
+				<artifactId>jmockit</artifactId>
+				<version>${jmockit_version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.easymock</groupId>
+				<artifactId>easymockclassextension</artifactId>
+				<version>${easymock_version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib-nodep</artifactId>
+				<version>${cglib_version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymockclassextension</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.jmockit</groupId>
+			<artifactId>jmockit</artifactId>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -63,12 +527,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${surefire-plugin-version}</version>
 				<configuration>
 					<useSystemClassLoader>true</useSystemClassLoader>
 					<forkMode>once</forkMode>
 					<argLine>${argline}</argLine>
-					<skipTests>true</skipTests>
 					<systemProperties>
 						<!-- common shared -->
 						<property>
@@ -140,6 +602,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -174,6 +637,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+
 	</build>
 	<distributionManagement>
 		<repository>
